fix scrollbar animation

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,10 +1,9 @@
 .Main {
   // border: solid 1px red;
   max-width: 100%;
-  min-height: 700vh;
+  min-height: 100vh;
   background-color: $color3;
-
-  padding: 1%;
+  padding: 5% 3%;
   .airplaneScrollBarDown {
     width: clamp(1em, 2.5vw, 3em);
     position: fixed;
