--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,4 +1,13 @@
 .Navbar {
+  background-color: rgb(242, 255, 240);
+  width: 100%;
+  height: 5vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: fixed;
+  top: 0;
+
   .topNavBar {
     display: flex;
     flex-direction: row;
@@ -8,6 +17,7 @@
     li {
       margin: 1%;
       margin: 0 8vw 0 0vw;
+      cursor: grabbing;
       .active {
         display: none;
         font-weight: bolder;
@@ -17,20 +27,19 @@
 
   .menuIcon,
   .menuIconClosed {
-    position: absolute;
-    right: 4vw;
-    top: 1vh;
+    margin-right: 4vw;
     cursor: grabbing;
   }
 
   .menuIcon {
     width: clamp(1.5em, 2.5vw, 3.2em);
     height: clamp(1.8em, 3vh, 3.7em);
+    z-index: 999999999;
   }
   .menuIconClosed {
-    width: clamp(1.8em, 1vw , 3.5em);
+    width: clamp(1.8em, 1vw, 3.5em);
     height: clamp(1.8em, 1vh, 3.5em);
-    animation: animate 1.5s ease-in-out;
+    animation: animate 1.2s ease-in-out;
     animation-name: burgeMenuApparition;
   }
 }
